Paso a versión 3.2.3 de Spring Boot. - Se evitan code-smells