@@ -1,10 +1,5 @@
 package es.jbp.kajtools.util;
 
-import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.support.PathMatchingResourcePatternResolver;
 import org.springframework.core.io.support.ResourcePatternResolver;
@@ -13,6 +8,11 @@ import org.springframework.core.type.classreading.MetadataReader;
 import org.springframework.core.type.classreading.MetadataReaderFactory;
 import org.springframework.util.ClassUtils;
 import org.springframework.util.SystemPropertyUtils;
+
+import java.io.IOException;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
 
 /**
  * Escaneador de clases a traves de Spring Core
@@ -29,7 +29,7 @@ public class ClassScanner {
         return classNameList
             .stream()
             .flatMap(s -> findClasses(s).stream())
-            .collect(Collectors.toList());
+                .toList();
     }
 
     private List<Class> findClasses(String className) {
