@@ -1,7 +1,6 @@
 package es.jbp.kajtools.util;
 
 import java.io.BufferedWriter;
-import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
@@ -9,7 +8,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class FileUtils {
@@ -19,7 +17,7 @@ public class FileUtils {
         try (Stream<Path> stream = Files.list(Paths.get(folder))) {
             return stream
                     .filter(file -> !Files.isDirectory(file))
-                    .collect(Collectors.toList());
+                    .toList();
         }
     }
 
@@ -30,7 +28,7 @@ public class FileUtils {
         )) {
             return stream
                     .filter(file -> !Files.isDirectory(file))
-                    .collect(Collectors.toList());
+                    .toList();
         }
     }
 
